# semantic_rsm

./: README.md  pyproject.toml  requirements.txt
src/srsm/: entrypoint.py
src/srsm/core/: bipartite_matching.py  pre_sim_filtering.py  sim_calc.py  sim_func.py
src/srsm/util/: file_io.py
