[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "srsm"
version = "0.0"
authors = [{ name = "Tassilo Wald", email = "tassilo.wald@dkfz-heidelberg.de"}]
description= """Code to """

dynamic = ["dependencies"]

readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: GNU GENERAL PUBLIC LICENSE",
]

[project.urls]
"Homepage" = "https://github.com/TaWald/semantic_rsm"

[tool.black]
line-length = 118

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
